Completed current work, planning to refine further

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="wrapper">
         <div class="calculator">
             <div class="console">
-                <div class="preview">12 - 1</div>
-                <div class="result">11</div>
+                <div class="preview"></div>
+                <div class="result">0</div>
             </div>
             <div class="features">
                 <button class="btn" id="clear">CLEAR</button>
